[package]
name = "unblocker"
version = "0.1.0"
edition = "2018"
authors = ["alpha2phi <alpha2phi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "unblocker"
path = "src/main.rs"

[dependencies]
structopt = "0.3.23"
anyhow = "1.0.44"
ansi_term = "0.12.1"
indicatif = "0.16.2"
log = "0.4.14"
env_logger = "0.9.0"
clap-verbosity-flag = "0.3.2"


[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
